--- a/styles.css
+++ b/styles.css
@@ -131,10 +131,11 @@ ul {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   font-size: 30px;
 }
 .mainTextWrapper {
+  margin-top: 45px;
   position: absolute;
   display: flex;
   flex-direction: column;
