--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,14 @@ ul {
   display: none;
 }
 
+.closeBtn {
+  display: none;
+}
+
+.btnMenu {
+  display: none;
+}
+
 .container {
   width: 100%;
   display: flex;
@@ -409,11 +417,75 @@ ul {
   .mobileNavActive {
     display: none;
   }
-  .navWrapper {
+
+  .mainWrapper {
+    background-size: 350px;
+    background-position: 30px;
+    font-size: 12px;
+    max-width: 100%;
+    height: 30vh;
+  }
+
+  .mainTextWrapper {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: flex-start;
+  }
+
+  .section1 {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 50px;
+    padding: 40px 0;
+  }
+
+  .section3Content {
+    background: #ffffff8f;
+    padding: 25px;
+    border-radius: 10px;
+  }
+
+  .cardWrapper {
+    width: 100%;
+    display: grid;
+    grid-template-areas:
+      "card1 card2"
+      "card3 card3";
+    gap: 10px;
+  }
+
+  .card {
+    justify-content: flex-start;
+    align-items: center;
+    padding: 10px;
+  }
+
+  .card h3 {
+    font-size: 13px;
+  }
+
+  .card1 {
+    grid-area: card1;
+    height: 100%;
+  }
+
+  .card2 {
+    grid-area: card2;
+  }
+  .card3 {
+    grid-area: card3;
+  }
+
+  .navWrapper {
+    display: none;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 30px;
     width: 100%;
     position: absolute;
     background: #e3e6ec;
@@ -422,6 +494,40 @@ ul {
     padding: 40px 20px;
     height: 100%;
     z-index: 5;
+    transition: 300ms;
+  }
+
+  .btnMenu {
+    width: 35px;
+    display: flex;
+  }
+
+  .navWrapperMobileActive {
+    display: flex;
+  }
+
+  .navWrapperMobileSlidOut {
     transform: translateX(380px);
+  }
+  .navWrapperMobileSlidIn {
+    transform: translateX(0px);
+  }
+
+  .navWrapper li {
+    width: 100%;
+    padding: 10px;
+  }
+
+  .closeBtn {
+    display: block;
+    color: #afb0bb;
+  }
+
+  .section7 {
+    flex-direction: column;
+    gap: 15px;
+  }
+  .textWrapper {
+    flex-direction: row;
   }
 }
